Substitui GPT-4.1 por Gemini 1.5 Flash

--- a/landing.html
+++ b/landing.html
@@ -31,7 +31,7 @@ h2 { font-size:42px; margin-bottom:18px; }
     <div class="card"><h3>🔐 Segurança Bancária</h3><p>AES-256, JWT RS256, TLS 1.3, HMAC SHA256, RSA 4096.</p></div>
     <div class="card"><h3>📊 BI Profissional</h3><p>Dashboards, KPIs, gráficos avançados, análises.</p></div>
     <div class="card"><h3>⚡ Tempo Real</h3><p>WebSockets atualizam gráficos automaticamente.</p></div>
-    <div class="card"><h3>🤖 IA Híbrida</h3><p>IA Local + OpenAI GPT-4.1 para insights.</p></div>
+    <div class="card"><h3>🤖 IA Híbrida</h3><p>IA Local + Gemini 1.5 Flash (nuvem premium) para insights.</p></div>
     <div class="card"><h3>📱 Mobile Nativo</h3><p>Kivy, Flutter e React Native disponíveis.</p></div>
     <div class="card"><h3>🧩 Microserviços</h3><p>Arquitetura distribuída e escalável.</p></div>
   </div>
